--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,17 @@
                 "@typescript-eslint",
                 "import"
             ],
+            "settings": {
+                "import/parsers": {
+                    "@typescript-eslint/parser": [".ts"]
+                },
+                "import/resolver": {
+                    "typescript": {
+                        "alwaysTryTypes": true,
+                        "project": "./tsconfig.json"
+                    }
+                }
+            },
             "extends": [
                 "eslint:recommended",
                 "plugin:import/recommended",
