--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
     "version": "0.0.0",
     "author": "Jordi Marimon Palarea",
     "description": "Parses TypeScript AST for generating documentation",
+    "homepage": "https://github.com/jordimarimon/ts-ast-parser.git",
     "license": "MIT",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "module": "dist/index.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jordimarimon/ts-ast-parser.git"
+    },
     "keywords": [
         "TypeScript",
         "AST",
@@ -15,11 +20,6 @@
         "Documentation",
         "doc"
     ],
-    "homepage": "https://github.com/jordimarimon/ts-ast-parser.git",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/jordimarimon/ts-ast-parser.git"
-    },
     "engines": {
         "node": ">=16.0.0",
         "npm": ">=7.0.0"
@@ -27,7 +27,9 @@
     "scripts": {
         "build": "tsc",
         "build:doc": "vite build",
-        "test": "",
+        "test": "vitest --config vitest.config.ts",
+        "test:run": "vitest run --config vitest.config.ts",
+        "coverage": "vitest run --coverage --config vitest.config.ts",
         "dev:doc": "vite --host --config vite.config.ts",
         "preview": "vite preview",
         "prepare": "./scripts/prepare.sh",
@@ -57,6 +59,7 @@
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
         "@typescript/lib-dom": "npm:@types/web@^0.0.68",
+        "c8": "^7.11.3",
         "conventional-changelog-cli": "^2.2.2",
         "cspell": "^6.1.3",
         "eslint": "^8.18.0",
