--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
         "bump": "npx ncu -u -x typescript,@types/node,@typescript/lib-dom",
         "lint": "eslint \"**/*.{ts,js}\" --max-warnings 0",
         "lint:fix": "eslint \"**/*.{ts,js}\" --fix --cache --max-warnings 0",
-        "prettier:fix": "prettier --write",
         "spellcheck": "cspell \"**/*.{js,ts,json,html,css,md}\" --no-progress",
         "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "analyse": "source-map-explorer ./dist/**.js"
@@ -45,8 +44,7 @@
     "lint-staged": {
         "**/*.{js,ts,html,css}": [
             "npm run lint:fix",
-            "npm run spellcheck",
-            "npm run prettier:fix"
+            "npm run spellcheck"
         ]
     },
     "dependencies": {
@@ -63,12 +61,11 @@
         "conventional-changelog-cli": "^2.2.2",
         "cspell": "^6.1.3",
         "eslint": "^8.18.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.1.1",
-        "eslint-plugin-import": "^2.26.0",
         "lint-staged": "^13.0.3",
         "npm-check-updates": "^14.1.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.7.1",
         "source-map-explorer": "^2.5.2",
         "typescript": "~4.7.4",
         "vite": "^2.9.13",
