--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "ts-ast-parser",
     "version": "0.0.0",
     "author": "Jordi Marimon Palarea",
-    "description": "Parses TypeScript AST for generating documentation",
+    "description": "Simplifies TypeScript AST for generating documentation",
     "homepage": "https://github.com/jordimarimon/ts-ast-parser.git",
     "license": "MIT",
     "main": "dist/index.js",
@@ -63,12 +63,14 @@
         "eslint": "^8.18.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.1.1",
+        "glob": "^8.0.3",
         "lint-staged": "^13.0.3",
         "npm-check-updates": "^14.1.1",
         "npm-run-all": "^4.1.5",
         "source-map-explorer": "^2.5.2",
         "typescript": "~4.7.4",
         "vite": "^2.9.13",
+        "vite-tsconfig-paths": "^3.5.0",
         "vitest": "^0.16.0"
     }
 }
