--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,11 @@
         "module": "es2020",
         "lib": [
             "es2020"
-        ]
+        ],
+        "paths": {
+            "ts-ast-parser": [
+                "./src/index.ts"
+            ]
+        }
     }
 }
