docs: use 11ty for the documentation site

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -408,6 +408,16 @@
                 "import/named": "off",
                 "import/no-named-as-default-member": "off"
             }
+        },
+        {
+            "files": "**/*.html",
+            "plugins": [
+                "@html-eslint"
+            ],
+            "parser": "@html-eslint/parser",
+            "extends": [
+                "plugin:@html-eslint/recommended"
+            ]
         }
     ]
 }
