--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     },
     "scripts": {
         "build": "tsc --build ./tsconfig.build.json",
-        "build:doc": "vite build",
+        "build:doc": "eleventy",
+        "dev:doc": "eleventy --serve",
         "test": "vitest run --config vitest.config.ts",
         "coverage": "vitest run --coverage --config vitest.config.ts",
-        "dev:doc": "vite --host --config vite.config.ts",
-        "preview": "vite preview",
         "prepare": "./scripts/prepare.sh",
         "upgrade": "rm -rf node_modules package-lock.json && npm i",
         "bump": "npx ncu -u -x typescript,@types/node,@typescript/lib-dom",
@@ -50,8 +49,11 @@
         "tslib": "^2.4.0"
     },
     "devDependencies": {
+        "@11ty/eleventy": "^1.0.1",
         "@commitlint/cli": "^17.0.3",
         "@commitlint/config-conventional": "^17.0.3",
+        "@html-eslint/eslint-plugin": "^0.13.2",
+        "@html-eslint/parser": "^0.13.2",
         "@types/node": "~16.11.25",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
@@ -68,7 +70,6 @@
         "npm-run-all": "^4.1.5",
         "source-map-explorer": "^2.5.2",
         "typescript": "~4.7.4",
-        "vite": "^2.9.14",
         "vite-tsconfig-paths": "^3.5.0",
         "vitest": "^0.18.0"
     }
