--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
         "prepare": "./scripts/prepare.sh",
         "upgrade": "rm -rf node_modules package-lock.json && npm i",
         "bump": "npx ncu -u -x typescript,@types/node,@typescript/lib-dom",
-        "lint": "eslint \"**/*.{ts,js}\" --max-warnings 0",
-        "lint:fix": "eslint \"**/*.{ts,js}\" --fix --cache --max-warnings 0",
+        "lint": "eslint \"**/*.{ts,js,html}\" --max-warnings 0",
+        "lint:fix": "eslint \"**/*.{ts,js,html}\" --fix --cache --max-warnings 0",
         "spellcheck": "cspell \"**/*.{js,ts,json,html,css,md}\" --no-progress",
         "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "analyse": "source-map-explorer ./dist/**.js"
