docs: configure gh-pages

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "build": "tsc --build ./tsconfig.build.json",
         "build:doc": "eleventy",
         "dev:doc": "eleventy --serve",
+        "deploy:doc": "gh-pages -d _site -m \"docs: update documentation\"",
         "test": "vitest run --config vitest.config.ts",
         "coverage": "vitest run --coverage --config vitest.config.ts",
         "prepare": "./scripts/prepare.sh",
@@ -64,6 +65,7 @@
         "eslint": "^8.19.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.2.5",
+        "gh-pages": "^4.0.0",
         "glob": "^8.0.3",
         "lint-staged": "^13.0.3",
         "npm-check-updates": "^15.2.5",
