--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@typescript-eslint/parser": "^5.31.0",
         "@typescript/lib-dom": "npm:@types/web@^0.0.70",
         "c8": "^7.12.0",
+        "chalk": "^5.0.1",
         "cspell": "^6.5.0",
         "eslint": "^8.20.0",
         "eslint-import-resolver-typescript": "^3.3.0",
