--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "author": "Jordi Marimon Palarea",
     "description": "Simplifies TypeScript AST for generating documentation",
-    "homepage": "https://github.com/jordimarimon/ts-ast-parser.git",
+    "homepage": "https://jordimarimon.github.io/ts-ast-parser",
     "license": "MIT",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -12,12 +12,20 @@
         "type": "git",
         "url": "https://github.com/jordimarimon/ts-ast-parser.git"
     },
+    "bugs": {
+        "url": "https://github.com/jordimarimon/ts-ast-parser/issues"
+    },
     "keywords": [
         "TypeScript",
         "AST",
         "Abstract Syntax Tree",
         "Documentation",
         "doc"
+    ],
+    "files": [
+        "dist/",
+        "LICENSE",
+        "README.md"
     ],
     "engines": {
         "node": ">=16.0.0",
@@ -46,6 +54,9 @@
     "dependencies": {
         "tslib": "^2.4.0"
     },
+    "peerDependencies": {
+        "typescript": "~4.7.4"
+    },
     "devDependencies": {
         "@11ty/eleventy": "^1.0.1",
         "@commitlint/cli": "^17.0.3",
@@ -65,7 +76,6 @@
         "npm-check-updates": "^16.0.3",
         "npm-run-all": "^4.1.5",
         "source-map-explorer": "^2.5.2",
-        "typescript": "~4.7.4",
         "vite-tsconfig-paths": "^3.5.0",
         "vitest": "^0.19.1"
     }
