--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "**/*.{js,ts,html,css}": "npm run spellcheck"
     },
     "dependencies": {
+        "comment-parser": "^1.3.1",
         "tslib": "^2.4.0"
     },
     "peerDependencies": {
