--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,10 +52,6 @@
                 "curly": "error",
                 "func-name-matching": "error",
                 "grouped-accessor-pairs": "error",
-                "max-classes-per-file": [
-                    "error",
-                    1
-                ],
                 "max-depth": [
                     "error",
                     4
@@ -209,7 +205,7 @@
                     }
                 ],
                 "@typescript-eslint/default-param-last": "error",
-                "@typescript-eslint/explicit-function-return-type": "error",
+                "@typescript-eslint/explicit-function-return-type": "off",
                 "@typescript-eslint/explicit-member-accessibility": [
                     "error",
                     {
@@ -308,47 +304,7 @@
                     "error",
                     "property"
                 ],
-                "@typescript-eslint/naming-convention": [
-                    "error",
-                    {
-                        "selector": "default",
-                        "format": [
-                            "camelCase"
-                        ],
-                        "leadingUnderscore": "allow",
-                        "trailingUnderscore": "allow"
-                    },
-                    {
-                        "selector": "variable",
-                        "format": [
-                            "camelCase",
-                            "UPPER_CASE"
-                        ],
-                        "leadingUnderscore": "allow",
-                        "trailingUnderscore": "allow"
-                    },
-                    {
-                        "selector": "typeLike",
-                        "format": [
-                            "PascalCase"
-                        ]
-                    },
-                    {
-                        "selector": "objectLiteralProperty",
-                        "format": [
-                            "camelCase",
-                            "PascalCase"
-                        ]
-                    },
-                    {
-                        "selector": "enumMember",
-                        "format": [
-                            "camelCase",
-                            "PascalCase",
-                            "UPPER_CASE"
-                        ]
-                    }
-                ],
+                "@typescript-eslint/naming-convention": "off",
                 "@typescript-eslint/no-array-constructor": "error",
                 "@typescript-eslint/no-base-to-string": "error",
                 "@typescript-eslint/no-confusing-non-null-assertion": "error",
