--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     },
     "dependencies": {
         "comment-parser": "^1.3.1",
+        "globby": "^13.1.2",
         "tslib": "^2.4.0"
     },
     "peerDependencies": {
