--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,8 +7,8 @@ on:
         branches: [ "main" ]
 
 jobs:
-    analyze:
-        name: Analyze
+    analyse:
+        name: Analyse
         runs-on: ubuntu-latest
         permissions:
             actions: read
