--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -7,8 +7,8 @@ on:
         branches: [ "main" ]
 
 jobs:
-    analyze:
-        name: Analyze
+    analyse:
+        name: Analyse
         runs-on: ubuntu-latest
         steps:
             -   name: Checkout repository
