--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
     analyse:
+        if: ${{ github.actor != 'dependabot[bot]' }}
         name: Analyse
         runs-on: ubuntu-latest
         steps:
