--- a/packages/to-markdown/tsconfig.build.json
+++ b/packages/to-markdown/tsconfig.build.json
@@ -16,7 +16,7 @@
     ],
     "references": [
         {
-            "path": "../core"
+            "path": "../core/tsconfig.build.json"
         }
     ]
 }
