--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
     "name": "ts-ast-parser",
-    "version": "0.0.0",
+    "private": true,
     "author": "Jordi Marimon Palarea",
     "description": "Simplifies TypeScript AST for generating documentation",
     "homepage": "https://jordimarimon.github.io/ts-ast-parser",
     "license": "MIT",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "module": "dist/index.js",
     "workspaces": [
         "packages/*"
     ],
@@ -18,18 +15,6 @@
     "bugs": {
         "url": "https://github.com/jordimarimon/ts-ast-parser/issues"
     },
-    "keywords": [
-        "TypeScript",
-        "AST",
-        "Abstract Syntax Tree",
-        "Documentation",
-        "doc"
-    ],
-    "files": [
-        "dist/",
-        "LICENSE",
-        "README.md"
-    ],
     "engines": {
         "node": ">=16.0.0",
         "npm": ">=7.0.0"
