refactor: use moduleResolution NodeNext in tsconfig

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,18 @@
                 "plugin:@typescript-eslint/recommended"
             ],
             "rules": {
+                "indent": ["error", 4, {"SwitchCase": 1}],
+                "key-spacing": ["error", { "beforeColon": false, "afterColon": true, "mode": "strict" }],
+                "quotes": ["error", "single"],
+                "semi": ["error", "always"],
+                "linebreak-style": ["error", "unix"],
+                "max-len": ["error", { "code": 120 }],
+                "max-statements-per-line": ["error", { "max": 1 }],
+                "no-mixed-spaces-and-tabs": "error",
+                "no-multi-spaces": "error",
+                "no-trailing-spaces": "error",
+                "space-before-function-paren": ["error", "never"],
+                "space-before-blocks": "error",
                 "array-callback-return": "error",
                 "no-constructor-return": "error",
                 "no-promise-executor-return": "error",
@@ -331,7 +343,7 @@
                 "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
                 "@typescript-eslint/no-unnecessary-type-arguments": "error",
                 "@typescript-eslint/no-unnecessary-type-assertion": "error",
-                "@typescript-eslint/no-useless-constructor": "off",
+                "@typescript-eslint/no-useless-constructor": "error",
                 "@typescript-eslint/prefer-for-of": "error",
                 "@typescript-eslint/prefer-readonly": "error",
                 "@typescript-eslint/prefer-string-starts-ends-with": "error",
