--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,9 +5,14 @@
     "description": "Simplifies TypeScript AST for generating documentation",
     "homepage": "https://jordimarimon.github.io/ts-ast-parser",
     "license": "MIT",
-    "main": "dist/index.js",
+    "type": "module",
     "types": "dist/index.d.ts",
-    "module": "dist/index.js",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/jordimarimon/ts-ast-parser.git",
@@ -29,8 +34,7 @@
         "README.md"
     ],
     "engines": {
-        "node": ">=16.0.0",
-        "npm": ">=7.0.0"
+        "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
     },
     "dependencies": {
         "comment-parser": "^1.3.1",
