--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
         "build": "tsc --build packages/${PACKAGE:-*}/tsconfig.build.json",
         "doc": "npm-run-all clear:doc -p build:*",
         "build:11ty": "NODE_ENV=production eleventy ",
-        "build:css": "tailwindcss -i docs/assets/css/main.css -o _site/assets/css/main.css --postcss",
+        "build:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css",
         "dev:11ty": "eleventy --serve",
-        "dev:css": "tailwindcss -i docs/assets/css/main.css -o _site/assets/css/main.css --watch --postcss",
+        "dev:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css --watch",
         "deploy:doc": "gh-pages -d _site -m \"docs: update documentation\"",
         "test": "vitest run --config vitest.config.ts",
         "coverage": "vitest run --coverage --config vitest.config.ts",
@@ -64,8 +64,12 @@
         "npm-check-updates": "^16.0.5",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.16",
+        "postcss-cli": "^10.0.0",
+        "postcss-import": "^14.1.0",
+        "postcss-preset-env": "^7.7.2",
         "source-map-explorer": "^2.5.2",
         "tailwindcss": "^3.1.8",
+        "tailwindcss-logical": "^3.0.0",
         "tslib": "^2.4.0",
         "typescript": "~4.7.4",
         "vite-tsconfig-paths": "^3.5.0",
