--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     },
     "devDependencies": {
         "@11ty/eleventy": "^1.0.1",
+        "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
         "@commitlint/cli": "^17.0.3",
         "@commitlint/config-conventional": "^17.0.3",
         "@types/node": "~18.7.1",
@@ -58,6 +59,7 @@
         "gh-pages": "^4.0.0",
         "globby": "^13.1.2",
         "lint-staged": "^13.0.3",
+        "luxon": "^3.0.1",
         "mdast-builder": "^1.1.1",
         "mdast-util-gfm": "^2.0.1",
         "mdast-util-to-markdown": "^1.3.0",
