--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "start": "npm-run-all -p dev:*",
         "build": "tsc --build packages/${PACKAGE:-*}/tsconfig.build.json",
         "doc": "npm-run-all clear:doc -p build:*",
-        "build:11ty": "NODE_ENV=production eleventy ",
+        "build:11ty": "NODE_ENV=production eleventy",
         "build:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css",
         "dev:11ty": "eleventy --serve",
         "dev:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css --watch",
@@ -54,6 +54,7 @@
         "c8": "^7.12.0",
         "chalk": "^5.0.1",
         "comment-parser": "^1.3.1",
+        "esbuild": "^0.15.2",
         "eslint": "^8.21.0",
         "eslint-import-resolver-typescript": "^3.4.0",
         "gh-pages": "^4.0.0",
