docs: style the playground (ace editor and json editor)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "lib": [
-            "es2020"
+            "es2020",
+            "dom"
         ]
     },
     "exclude": [
