--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@typescript-eslint/eslint-plugin": "^5.33.0",
         "@typescript-eslint/parser": "^5.33.0",
         "@typescript/lib-dom": "npm:@types/web@^0.0.70",
+        "ace-builds": "^1.9.5",
         "autoprefixer": "^10.4.8",
         "c8": "^7.12.0",
         "chalk": "^5.0.1",
@@ -59,6 +60,7 @@
         "eslint-import-resolver-typescript": "^3.4.0",
         "gh-pages": "^4.0.0",
         "globby": "^13.1.2",
+        "jsoneditor": "^9.9.0",
         "lint-staged": "^13.0.3",
         "luxon": "^3.0.1",
         "mdast-builder": "^1.1.1",
