--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "c8": "^7.12.0",
         "chalk": "^5.0.1",
         "comment-parser": "^1.3.1",
+        "cssnano": "^5.1.13",
         "esbuild": "^0.15.2",
         "eslint": "^8.21.0",
         "eslint-import-resolver-typescript": "^3.4.0",
