--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,18 @@
 version: 2
 
 updates:
-    - package-ecosystem: npm
-      directory: /
-      schedule:
-          interval: daily
-      open-pull-requests-limit: 10
+    -   package-ecosystem: "npm"
+        directory: "/"
+        schedule:
+            interval: "daily"
+        open-pull-requests-limit: 10
+        ignore:
+            -   dependency-name: "typescript"
+            -   dependency-name: "@types/node"
+            -   dependency-name: "@typescript/lib-dom"
 
-    - package-ecosystem: github-actions
-      directory: /
-      schedule:
-          interval: weekly
-      open-pull-requests-limit: 10
+    -   package-ecosystem: github-actions
+        directory: /
+        schedule:
+            interval: weekly
+        open-pull-requests-limit: 10
