--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "esbuild": "^0.15.3",
         "eslint": "^8.22.0",
         "eslint-import-resolver-typescript": "^3.4.1",
+        "eslint-plugin-sonarjs": "^0.15.0",
         "gh-pages": "^4.0.0",
         "globby": "^13.1.2",
         "jsoneditor": "^9.9.0",
