--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@typescript-eslint/eslint-plugin": "^5.35.1",
         "@typescript-eslint/parser": "^5.35.1",
         "@typescript/lib-dom": "npm:@types/web@^0.0.72",
+        "@vitest/coverage-c8": "^0.22.1",
         "ace-builds": "^1.9.6",
         "autoprefixer": "^10.4.8",
         "c8": "^7.12.0",
