--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,7 +47,7 @@
                 "no-mixed-spaces-and-tabs": "error",
                 "no-multi-spaces": "error",
                 "no-trailing-spaces": "error",
-                "space-before-function-paren": ["error", "never"],
+                "space-before-function-paren": ["error", {"anonymous": "always", "named": "never"}],
                 "space-before-blocks": "error",
                 "array-callback-return": "error",
                 "no-constructor-return": "error",
