--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "postcss-cli": "^10.0.0",
         "postcss-import": "^14.1.0",
         "postcss-preset-env": "^7.8.0",
+        "reflect-metadata": "^0.1.13",
         "source-map-explorer": "^2.5.2",
         "tailwindcss": "^3.1.8",
         "tailwindcss-logical": "^3.0.0",
