--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,6 @@
         "tslib": "^2.4.0"
     },
     "peerDependencies": {
-        "typescript": "~4.7.4"
+        "typescript": "^4.8.2"
     }
 }
