--- a/packages/to-markdown/package.json
+++ b/packages/to-markdown/package.json
@@ -45,6 +45,6 @@
         "tslib": "^2.4.0"
     },
     "peerDependencies": {
-        "typescript": "~4.7.4"
+        "typescript": "^4.8.2"
     }
 }
