--- a/package.json
+++ b/package.json
@@ -66,9 +66,12 @@
         "eslint-plugin-sonarjs": "^0.15.0",
         "gh-pages": "^4.0.0",
         "globby": "^13.1.2",
+        "hast-util-to-html": "^8.0.3",
+        "hastscript": "^7.0.2",
         "jsoneditor": "^9.9.0",
         "lint-staged": "^13.0.3",
         "luxon": "^3.0.3",
+        "markdown-it": "^13.0.1",
         "mdast-builder": "^1.1.1",
         "mdast-util-gfm": "^2.0.1",
         "mdast-util-to-markdown": "^1.3.0",
