--- a/packages/writers/package.json
+++ b/packages/writers/package.json
@@ -40,6 +40,9 @@
     },
     "dependencies": {
         "@ts-ast-parser/core": "0.0.0",
+        "hast-util-to-html": "^8.0.3",
+        "hastscript": "^7.0.2",
+        "markdown-it": "^13.0.1",
         "mdast-builder": "^1.1.1",
         "mdast-util-gfm": "^2.0.1",
         "mdast-util-to-markdown": "^1.3.0",
