--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,3 +1,17 @@
 {
-    "extends": "../../tsconfig.json"
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "outDir": "./dist",
+        "declarationMap": true,
+        "sourceMap": true,
+        "declaration": true,
+        "tsBuildInfoFile": ".tsbuildinfo"
+    },
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "**node_modules**"
+    ]
 }
