--- a/packages/readers/package.json
+++ b/packages/readers/package.json
@@ -9,6 +9,8 @@
     "types": "dist/index.d.ts",
     "exports": {
         ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs",
             "types": "./dist/index.d.ts",
             "default": "./dist/index.js"
         }
