--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,7 @@
         "README.md"
     ],
     "engines": {
-        "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+        "node": ">=18.0.0"
     },
     "dependencies": {
         "comment-parser": "^1.3.1",
