--- a/packages/readers/package.json
+++ b/packages/readers/package.json
@@ -36,7 +36,7 @@
         "README.md"
     ],
     "engines": {
-        "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+        "node": ">=18.0.0"
     },
     "dependencies": {
         "@ts-ast-parser/core": "0.0.0",
