--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "doc:build:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css",
         "doc:start:11ty": "eleventy --serve --config=.eleventy.cjs",
         "doc:start:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css --watch",
+        "publish:all": "npm publish --access public --workspaces",
         "test": "vitest run --config vitest.config.ts",
         "coverage": "vitest run --coverage --config vitest.config.ts",
         "prepare": "./scripts/prepare.sh",
