chore: bump TypeScript to 4.9

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "coverage": "vitest run --coverage --config vitest.config.ts",
         "prepare": "./scripts/prepare.sh",
         "upgrade": "rm -rf node_modules package-lock.json && npm i",
-        "bump": "npx ncu -u -x typescript,@types/node,@typescript/lib-dom",
+        "bump": "npx ncu -u",
         "bump:pkg": "node ./scripts/bump.mjs",
         "lint": "eslint \"**/*.ts\" --max-warnings 0",
         "lint:fix": "eslint \"**/*.ts\" --fix --cache --max-warnings 0"
@@ -47,46 +47,46 @@
     },
     "devDependencies": {
         "@11ty/eleventy": "^1.0.2",
-        "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
-        "@commitlint/cli": "^17.1.2",
-        "@commitlint/config-conventional": "^17.1.0",
-        "@types/node": "~18.7.3",
+        "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
+        "@commitlint/cli": "^17.3.0",
+        "@commitlint/config-conventional": "^17.3.0",
+        "@types/node": "~18.11.17",
         "@typescript-eslint/eslint-plugin": "^5.46.1",
         "@typescript-eslint/parser": "^5.46.1",
-        "@typescript/lib-dom": "npm:@types/web@^0.0.72",
+        "@typescript/lib-dom": "npm:@types/web@^0.0.84",
         "@vitest/coverage-c8": "^0.25.8",
-        "ace-builds": "^1.12.5",
-        "autoprefixer": "^10.4.12",
+        "ace-builds": "^1.14.0",
+        "autoprefixer": "^10.4.13",
         "c8": "^7.12.0",
-        "chalk": "^5.1.2",
+        "chalk": "^5.2.0",
         "comment-parser": "^1.3.1",
         "cssnano": "^5.1.14",
-        "esbuild": "^0.15.10",
+        "esbuild": "^0.16.8",
         "eslint": "^8.30.0",
         "eslint-import-resolver-typescript": "^3.5.2",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-sonarjs": "^0.16.0",
+        "eslint-plugin-sonarjs": "^0.17.0",
         "gh-pages": "^4.0.0",
-        "globby": "^13.1.2",
+        "globby": "^13.1.3",
         "jsoneditor": "^9.9.2",
-        "lint-staged": "^13.0.3",
+        "lint-staged": "^13.1.0",
         "luxon": "^3.1.1",
         "markdown-it": "^13.0.1",
         "mdast-builder": "^1.1.1",
         "mdast-util-gfm": "^2.0.1",
-        "mdast-util-to-markdown": "^1.3.0",
+        "mdast-util-to-markdown": "^1.4.0",
         "npm-check-updates": "^16.6.0",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.18",
-        "postcss-cli": "^10.0.0",
-        "postcss-import": "^15.0.0",
-        "postcss-preset-env": "^7.8.1",
+        "postcss": "^8.4.20",
+        "postcss-cli": "^10.1.0",
+        "postcss-import": "^15.1.0",
+        "postcss-preset-env": "^7.8.3",
         "reflect-metadata": "^0.1.13",
         "source-map-explorer": "^2.5.3",
-        "tailwindcss": "^3.1.8",
+        "tailwindcss": "^3.2.4",
         "tailwindcss-logical": "^3.0.0",
-        "tslib": "^2.4.0",
-        "typescript": "^4.8.2",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.4",
         "vite-tsconfig-paths": "^4.0.3",
         "vitest": "^0.25.8"
     }
