docs: add macros for reusing repeated HTML

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "doc:start:11ty": "eleventy --serve --config=.eleventy.cjs",
         "doc:start:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css --watch",
         "publish:all": "npm publish --access public --workspaces",
+        "publish:core": "npm publish --access public --workspace ./packages/core",
+        "publish:readers": "npm publish --access public --workspace ./packages/readers",
         "test": "vitest run --config vitest.config.ts",
         "coverage": "vitest run --coverage --config vitest.config.ts",
         "prepare": "./scripts/prepare.sh",
