docs: add script for generating the API reference
It's still not finished. It's a WIP.

--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
         "build": "npm-run-all build:esm build:cjs",
         "build:cjs": "node ./scripts/build-pkgs.mjs",
         "build:esm": "tsc --build packages/*/tsconfig.json",
-        "doc:build": "npm-run-all doc:clear -p doc:build:11ty doc:build:css",
+        "doc:build": "npm-run-all doc:clear doc:api -p doc:build:11ty doc:build:css",
         "doc:clear": "rm -rf ./_site",
-        "doc:start": "npm-run-all -p doc:start:11ty doc:start:css",
+        "doc:start": "npm-run-all doc:api -p doc:start:11ty doc:start:css",
         "doc:deploy": "gh-pages -d _site -m \"docs: update documentation\"",
         "doc:build:11ty": "NODE_ENV=production eleventy --config=.eleventy.cjs",
         "doc:build:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css",
         "doc:start:11ty": "eleventy --serve --config=.eleventy.cjs",
         "doc:start:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css --watch",
+        "doc:api": "node scripts/generate-api-reference.mjs",
         "publish:all": "npm publish --access public --workspaces",
         "publish:core": "npm publish --access public --workspace ./packages/core",
         "publish:readers": "npm publish --access public --workspace ./packages/readers",
