fix(core): support namespaced/star exports
Now the analyser will reflect exports like the following:

export * from 'foo.js';

Refs #197

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -238,83 +238,7 @@
                     }
                 ],
                 "@typescript-eslint/member-delimiter-style": "error",
-                "@typescript-eslint/member-ordering": [
-                    "error",
-                    {
-                        "default": [
-                            "signature",
-                            [
-                                "public-static-get",
-                                "public-static-set"
-                            ],
-                            "public-static-field",
-                            "public-decorated-field",
-                            [
-                                "public-decorated-get",
-                                "public-decorated-set"
-                            ],
-                            "protected-decorated-field",
-                            [
-                                "protected-decorated-get",
-                                "protected-decorated-set"
-                            ],
-                            "private-decorated-field",
-                            [
-                                "private-decorated-get",
-                                "private-decorated-set"
-                            ],
-                            "public-instance-field",
-                            "protected-static-field",
-                            "protected-instance-field",
-                            "private-static-field",
-                            "private-instance-field",
-                            "public-abstract-field",
-                            "protected-abstract-field",
-                            "private-abstract-field",
-                            "public-constructor",
-                            "protected-constructor",
-                            "private-constructor",
-                            "public-instance-get",
-                            [
-                                "protected-static-get",
-                                "protected-static-set"
-                            ],
-                            [
-                                "protected-instance-get",
-                                "protected-instance-set"
-                            ],
-                            [
-                                "private-static-get",
-                                "private-static-set"
-                            ],
-                            [
-                                "private-instance-get",
-                                "private-instance-set"
-                            ],
-                            "public-static-method",
-                            "public-instance-method",
-                            "protected-static-method",
-                            "protected-instance-method",
-                            "private-static-method",
-                            "private-instance-method",
-                            [
-                                "public-abstract-get",
-                                "public-abstract-set"
-                            ],
-                            [
-                                "protected-abstract-get",
-                                "protected-abstract-set"
-                            ],
-                            [
-                                "private-abstract-get",
-                                "private-abstract-set"
-                            ],
-                            "public-abstract-method",
-                            "protected-abstract-method",
-                            "private-abstract-method"
-                        ]
-                    }
-                ],
+                "@typescript-eslint/member-ordering": "off",
                 "@typescript-eslint/naming-convention": "off",
                 "@typescript-eslint/no-array-constructor": "error",
                 "@typescript-eslint/no-base-to-string": "error",
