--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,7 @@
         "README.md"
     ],
     "engines": {
-        "node": ">=18.0.0"
+        "node": "^14.20.0 || ^16.0.0 || ^18.0.0"
     },
     "dependencies": {
         "comment-parser": "^1.3.1",
@@ -44,6 +44,6 @@
         "tslib": "^2.4.1"
     },
     "peerDependencies": {
-        "typescript": "^4.9.4"
+        "typescript": "^4.0.2"
     }
 }
