--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
         strategy:
             matrix:
                 node-version: [ 14.20.0, 16.x, 18.x ]
+                ts-version: [ 4.7.2, 4.8.2, 4.9.4 ]
         steps:
             -   name: Checkout repository
                 uses: actions/checkout@v3
@@ -32,6 +33,11 @@ jobs:
 
             -   name: Install dependencies
                 run: npm ci
+
+            -   name: Set up the TypeScript version
+                run: |
+                    npm remove typescript
+                    npm i -D -E typescript@${{ matrix.ts-version }}
 
             -   name: Build
                 run: npm run build
