--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "engines": {
         "node": "^14.20.0 || ^16.0.0 || ^18.0.0",
-        "npm": "^7.0.0 || ^8.0.0"
+        "npm": "^7.0.0 || ^8.0.0 || ^9.0.0"
     },
     "scripts": {
         "build": "npm-run-all build:esm build:cjs",
