feat: add a reference to the type definition
Now the types of symbols will have a reference to where the type is
defined.

Refs #76

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -198,10 +198,7 @@
                 "no-return-await": "off",
                 "@typescript-eslint/array-type": "error",
                 "@typescript-eslint/await-thenable": "error",
-                "@typescript-eslint/brace-style": [
-                    "error",
-                    "1tbs"
-                ],
+                "@typescript-eslint/brace-style": "off",
                 "@typescript-eslint/comma-dangle": [
                     "error",
                     "always-multiline"
