--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,13 +19,13 @@ jobs:
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
-            -   name: Setup Node.js 16.x
+            -   name: Setup Node.js 18.x
                 uses: actions/setup-node@v3
                 with:
-                    node-version: 16.x
+                    node-version: 18.x
 
             -   name: Install dependencies
-                run: npm ci --legacy-peer-deps
+                run: npm ci
 
             -   name: Run tests and collect coverage
                 run: npm run coverage
