--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "name": "ts-ast-parser",
     "author": "Jordi Marimon Palarea",
-    "description": "Simplifies TypeScript AST for generating documentation",
+    "description": "Simplifies the TypeScript AST for generating documentation",
     "homepage": "https://jordimarimon.github.io/ts-ast-parser",
     "license": "MIT",
     "type": "module",
@@ -74,10 +74,6 @@
         "jsoneditor": "^9.9.2",
         "lint-staged": "^13.1.0",
         "luxon": "^3.1.1",
-        "markdown-it": "^13.0.1",
-        "mdast-builder": "^1.1.1",
-        "mdast-util-gfm": "^2.0.1",
-        "mdast-util-to-markdown": "^1.4.0",
         "npm-check-updates": "^16.6.2",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.20",
