--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build and Test
 
 on:
     push:
-        branches: [ "dev" ]
+        branches: [ "main" ]
     pull_request:
-        branches: [ "dev" ]
+        branches: [ "main" ]
 
 jobs:
     analyse:
