--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -298,7 +298,10 @@
                 "@typescript-eslint/ban-types": [
                     "error",
                     {
-                        "types": {"{}": false},
+                        "types": {
+                            "{}": false,
+                            "Object": false
+                        },
                         "extendDefaults": true
                     }
                 ]
