--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "doc:start:11ty": "eleventy --serve --config=.eleventy.cjs",
         "doc:start:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css --watch",
         "doc:api": "node scripts/generate-api-reference.mjs",
-        "publish:all": "npm publish --access public --workspaces",
+        "publish": "npm publish --access public --workspaces",
         "test": "vitest run --config vitest.config.ts",
         "coverage": "vitest run --coverage --config vitest.config.ts",
         "prepare": "./scripts/prepare.sh",
