chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "private": true,
     "name": "ts-ast-parser",
     "author": "Jordi Marimon Palarea",
-    "description": "Simplifies the TypeScript AST for generating documentation",
     "homepage": "https://jordimarimon.github.io/ts-ast-parser",
     "license": "MIT",
     "type": "module",
@@ -24,14 +23,12 @@
         "build": "npm-run-all build:esm build:cjs",
         "build:cjs": "node ./scripts/build-pkgs.mjs",
         "build:esm": "tsc --build packages/*/tsconfig.json",
-        "doc:build": "npm-run-all doc:clear doc:api -p doc:build:11ty doc:build:css",
-        "doc:clear": "rm -rf ./_site",
-        "doc:start": "npm-run-all doc:api -p doc:start:11ty doc:start:css",
+        "doc:build": "npm-run-all doc:clear doc:api -p doc:build:11ty",
+        "doc:start": "npm-run-all doc:api -p doc:start:11ty",
         "doc:deploy": "gh-pages -d _site -m \"docs: update documentation\"",
+        "doc:clear": "rm -rf ./_site",
         "doc:build:11ty": "NODE_ENV=production eleventy --config=.eleventy.cjs",
-        "doc:build:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css",
         "doc:start:11ty": "eleventy --serve --config=.eleventy.cjs",
-        "doc:start:css": "postcss docs/assets/css/main.css -o _site/assets/css/main.css --watch",
         "doc:api": "node scripts/generate-api-reference.mjs",
         "publish": "npm publish --access public --workspaces",
         "test": "vitest run --config vitest.config.ts",
@@ -47,44 +44,43 @@
         "**/*.ts": "npm run lint:fix"
     },
     "devDependencies": {
-        "@11ty/eleventy": "^1.0.2",
+        "@11ty/eleventy": "^2.0.1",
         "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
-        "@commitlint/cli": "^17.3.0",
-        "@commitlint/config-conventional": "^17.3.0",
-        "@types/node": "~18.11.17",
-        "@typescript-eslint/eslint-plugin": "^5.47.0",
-        "@typescript-eslint/parser": "^5.47.0",
-        "@typescript/lib-dom": "npm:@types/web@^0.0.84",
-        "@vitest/coverage-c8": "^0.26.2",
-        "ace-builds": "^1.14.0",
-        "autoprefixer": "^10.4.13",
-        "c8": "^7.12.0",
+        "@commitlint/cli": "^17.5.1",
+        "@commitlint/config-conventional": "^17.4.4",
+        "@types/node": "~18.15.11",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "@typescript/lib-dom": "npm:@types/web@^0.0.99",
+        "@vitest/coverage-c8": "^0.29.8",
+        "ace-builds": "^1.16.0",
+        "autoprefixer": "^10.4.14",
+        "c8": "^7.13.0",
         "chalk": "^5.2.0",
         "comment-parser": "^1.3.1",
-        "cssnano": "^5.1.14",
-        "esbuild": "^0.16.10",
-        "eslint": "^8.30.0",
-        "eslint-import-resolver-typescript": "^3.5.2",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-sonarjs": "^0.17.0",
-        "gh-pages": "^4.0.0",
+        "cssnano": "^6.0.0",
+        "esbuild": "^0.17.15",
+        "eslint": "^8.38.0",
+        "eslint-import-resolver-typescript": "^3.5.5",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-sonarjs": "^0.19.0",
+        "gh-pages": "^5.0.0",
         "globby": "^13.1.3",
-        "jsoneditor": "^9.9.2",
-        "lint-staged": "^13.1.0",
-        "luxon": "^3.1.1",
-        "npm-check-updates": "^16.6.2",
+        "jsoneditor": "^9.10.0",
+        "lint-staged": "^13.2.1",
+        "luxon": "^3.3.0",
+        "npm-check-updates": "^16.10.7",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.20",
-        "postcss-cli": "^10.1.0",
+        "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
-        "postcss-preset-env": "^7.8.3",
+        "postcss-preset-env": "^8.3.0",
         "reflect-metadata": "^0.1.13",
         "source-map-explorer": "^2.5.3",
-        "tailwindcss": "^3.2.4",
+        "tailwindcss": "^3.3.1",
         "tailwindcss-logical": "^3.0.0",
-        "tslib": "^2.4.1",
-        "typescript": "^4.9.4",
-        "vite-tsconfig-paths": "^4.0.3",
-        "vitest": "^0.26.2"
+        "tslib": "^2.5.0",
+        "typescript": "^5.0.4",
+        "vite-tsconfig-paths": "^4.0.8",
+        "vitest": "^0.29.8"
     }
 }
