--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
     "name": "@ts-ast-parser/core",
     "version": "0.2.0",
     "author": "Jordi Marimon Palarea",
-    "description": "Simplifies TypeScript AST for generating documentation",
+    "description": "Reflects a simplified version of the TypeScript AST for generating documentation",
     "homepage": "https://jordimarimon.github.io/ts-ast-parser",
     "license": "MIT",
     "type": "module",
@@ -13,6 +13,11 @@
             "require": "./dist/index.cjs",
             "types": "./dist/index.d.ts",
             "default": "./dist/index.js"
+        },
+        "./utils/*.js": {
+            "import": "./dist/utils/*.js",
+            "types": "./dist/utils/*.d.ts",
+            "default": "./dist/utils/*.js"
         }
     },
     "repository": {
@@ -44,6 +49,6 @@
         "tslib": "^2.4.1"
     },
     "peerDependencies": {
-        "typescript": "^4.0.2"
+        "typescript": "^4.0.2 || ^5.0.4"
     }
 }
