docs: add component for rendering examples

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
         "allowSyntheticDefaultImports": true,
         "stripInternal": true,
         "skipLibCheck": true,
+        "verbatimModuleSyntax": false,
+        "isolatedModules": true,
         "target": "es2020",
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
