--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "postcss": "^8.4.21",
         "postcss-import": "^15.1.0",
         "postcss-preset-env": "^8.3.0",
+        "prismjs": "^1.29.0",
         "reflect-metadata": "^0.1.13",
         "source-map-explorer": "^2.5.3",
         "tailwindcss": "^3.3.1",
